modified css on buttons, added about view

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <p class="lead five text-center">It's always 5 o'clock somewhere...</p>
+  <p class="lead five text-center">Happy Hours... Happy People</p>
   <div class="jumbotron text-center">
     <div class="transbox">
       <h1 class="display-4">Charleston Happy Hours</h1>
