--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,9 +3,11 @@
 
 body {
   font-family: 'Fira Sans Condensed', sans-serif;
-  background-color: #233237;
+  background-color: #001133;
 
 }
+
+/* 233237 */
 
 nav.navbar {
   background-color: black;
@@ -73,8 +75,39 @@ h4 {
     text-align: center;
 }
 
-.btn {
-  background: black;
-  border: 1px solid #8e793e;
-  border-radius: 50%;
+.btn{
+  background:#b30000;
+  color:#fff;
+  border:15px;
+  position:relative;
+  height:40px;
+  font-size:1.6em;
+  padding:0 2em;
+  cursor:pointer;
+  transition:450ms ease all;
+  outline:none;
+}
+.btn:hover{
+  background:#fff;
+  color:#1AAB8A;
+}
+.btn:before,.btn:after{
+  content:'';
+  position:absolute;
+  top:0;
+  right:0;
+  height:2px;
+  width:0;
+  background: #1AAB8A;
+  transition:400ms ease all;
+}
+.btn:after{
+  right:inherit;
+  top:inherit;
+  left:0;
+  bottom:0;
+}
+.btn:hover:before,button:hover:after{
+  width:100%;
+  transition:800ms ease all;
 }
