added specials MVC

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,20 +21,11 @@ a {
 }
 
 .jumbotron {
-  background-image: image-url('cocktail2.jpg');
+  /*background-image:*/
   background-repeat: no-repeat;
   background-size: cover;
   padding: 100px;
 }
-
-//
-// div.transbox {
-//   background-color: #b1a296;
-//   vertical-align: middle;
-//   padding: 10px;
-//   opacity: 0.8;
-//   filter: alpha(opacity=80);
-// }
 
 h1.display-4 {
   font-size: 50px;
