--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
       <h1 class="display-4">Charleston Happy Hours</h1>
       <hr class="my-4">
       <p class="find">Check Out What's Going On In The Chuck Today!</p>
-        <%= link_to "Today", listings_index_path, class: 'btn btn-lg'%>
+        <%= link_to "Today", specials_path, class: 'btn btn-lg'%>
         <a class="btn btn-lg" href="#" role="button">Tomorrow</a></p>
     </div>
   </div>
