--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,7 @@
   <nav class="navbar" >
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><%= link_to "Home", root_path %></li>
         </ul>
 
         <form class="navbar-form navbar-right" action="/action_page.php">
