updated daily buttons path

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,13 +14,13 @@
   </div>
 <!-- <nav class="navbar"> -->
 <div class="text-center">
-    <a href="#" class="btn btn-lg">Monday</a>
-    <a href="#" class="btn btn-lg">Tuedsay</a>
-    <a href="#" class="btn btn-lg">Wednesday</a>
-    <a href="#" class="btn btn-lg">Thursday</a>
-    <a href="#" class="btn btn-lg">Friday</a>
-    <a href="#" class="btn btn-lg">Saturday</a>
-    <a href="#" class="btn btn-lg">Sunday</a>
+  <%= link_to "Monday", specials_path, class: 'btn btn-lg'%>
+  <%= link_to "Tuesday", specials_path, class: 'btn btn-lg'%>
+  <%= link_to "Wednesday", specials_path, class: 'btn btn-lg'%>
+  <%= link_to "Thursday", specials_path, class: 'btn btn-lg'%>
+  <%= link_to "Friday", specials_path, class: 'btn btn-lg'%>
+  <%= link_to "Saturday", specials_path, class: 'btn btn-lg'%>
+  <%= link_to "Sunday", specials_path, class: 'btn btn-lg'%>
 </div>
 <!-- </nav> -->
 
